# FBI

./: .eslintrc.cjs  .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.server.json  tsconfig.test.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
cli/fbi-tunnel/: Cargo.toml  Makefile  README.md  args.go  args_test.go  client.go  client_test.go  forwarder.go  forwarder_test.go  go.mod  listener.go  listener_test.go  main.go  main_test.go  mapping.go  mapping_test.go
cli/fbi-tunnel/scripts/: build-dist.sh
cli/fbi-tunnel/src/: args.rs  discovery.rs  forwarder.rs  listener.rs  main.rs  mapping.rs
cli/quantico/: Cargo.toml  Makefile  fidelity-snapshot.json  scenarios.json
cli/quantico/scenarios/: alt-screen-cycle.yaml  bracketed-paste-cycle.yaml  chatty.yaml  cjk-wide.yaml  crash-fast.yaml  cursor-styles.yaml  default.yaml  env-echo.yaml  garbled.yaml  hang.yaml  limit-breach-human.yaml  limit-breach.yaml  mouse-modes-cycle.yaml  plugin-fail.yaml  resume-aware.yaml  scroll-region-stress.yaml  scrollback-stress.yaml  slow-startup.yaml  tool-heavy.yaml  truecolor.yaml
cli/quantico/src/: argv.rs  executor.rs  jsonl.rs  limit.rs  main.rs  prompt_token.rs  scenario.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: config.rs  discovery.rs  main.rs  menu.rs  tray.rs  tunnel.rs
docs/: elixir-hardening.md  feature-gaps.md  ts-vs-elixir-orchestrator-audit.md
scripts/: build-cli-dist.sh  build-fbi-tunnel.sh  (+4 more)
(+752 files in other folders)
