[package]
name = "fbi-tunnel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fbi-tunnel"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
axum = { version = "0.8", features = ["ws"] }
